# chat_here

./: .gitignore  README.md
.github/workflows/: node.js.yml
chat_here/: README.md  index.html  package-lock.json  package.json  run-tauri-dev-inner.cmd  run-tauri-dev.cmd  run-tauri-dev.vbs
chat_here/docs/: gateway-m1.md  gateway-m10.md  gateway-m11.md  gateway-m12.md  gateway-m2.md  gateway-m3.md  gateway-m4.md  gateway-m5.md  gateway-m6.md  gateway-m7.md  gateway-m8.md  gateway-m9.md
chat_here/src/: main.js  styles.css
chat_here/src-tauri/: Cargo.toml  tauri.conf.json
chat_here/src-tauri/icons/: icon.icns
chat_here/src-tauri/src/: main.rs
chat_here/src/gateway/: models.js
chat_here/src/gateway/adapters/: codexAdapter.js  config.js  copilotAdapter.js  factory.js  gatewayDirective.js  mockCodexAdapter.js  mockCopilotAdapter.js  openAITransport.js  tauriCodexTransport.js  tauriCopilotTransport.js  tauriOpenAIHealth.js  tauriOpenAITransport.js  types.js
chat_here/src/gateway/auth/: tauriAuthBroker.js
chat_here/src/gateway/orchestrator/: contextBuilder.js  index.js  runner.js
chat_here/src/gateway/schema/: index.js
chat_here/src/gateway/state/: events.js  machine.js
chat_here/src/gateway/store/: eventRecord.js  fileStore.js  localStorageStore.js  memoryStore.js
chat_here/src/gateway/tests/: codexAdapter.test.js  events.test.js  fileStore.test.js  machine.test.js  orchestrator.test.js  providerConfig.test.js  render.test.js  runner.test.js  schema.test.js  tauriAuthBroker.test.js  tauriTransports.test.js  (+1 more)
chat_here/src/ui/: controller.js  render.js
