[package]
name = "chat_here"
version = "0.1.0"
description = "A simple Tauri demo app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = ["tray"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
